services/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
spec:
  ports:
    - protocol: TCP
      port: 8080
  clusterIP: None
  type: ClusterIP
